# agentlab-mesh-router

./: .dockerignore  .gcloudignore  .gitignore  CONSOLE_DESIGN.md  DEPLOY.md  DESIGN_UPDATE.md  Dockerfile  FINAL_DESIGN.md  Makefile  NOTIFICATIONS.md  QR_ENDCARD.md  README.md  SCAFFOLD.md  SETUP.md  VALIDATION.md  docker-compose.yml  pnpm-workspace.yaml  pyproject.toml  scaffold_contents.txt
agents/base/: __init__.py  agent_iface.py
agents/causal_estimation/: __init__.py  agent.py  agentcore_config.json  descriptor.py
agents/data_prep/: __init__.py  adk_config.yaml  agent.py  descriptor.py
agents/readout/: __init__.py  agent.py  descriptor.py
agents/spares/: __init__.py  (+3 more)
common/: bq.py  config.py  otel.py  schema.py
console/: Dockerfile  cloudbuild.yaml  package.json  pnpm-lock.yaml
docs/: DEMO.md  DEMO_OPERATOR_GUIDE.md  METHODOLOGY.md
harness/: __init__.py  inspect_runner.py
mesh/: __init__.py  registry.py  schema.py
orchestrator/: __init__.py  a2a.py  hub.py
router/: Dockerfile  __init__.py  bandit.py  baseline_embed_match.py  cascade.py  cloudbuild.yaml  features.py  learned_router.py  server.py
scripts/: aws_setup.sh  console_api.py  generate_pareto_curves.py  register_agents.sh  seed_demo_data.py  smoke_test.py
sentry/: __init__.py  offline_regression.py  online_cusum.py
signals/: __init__.py  self_report_tool.py
tests/: test_agents.py  test_harness.py  test_mesh.py  test_placeholder.py  test_router.py  test_signals.py  test_triage.py
triage/: __init__.py  a2ui_surface.py  cluster.py  generate_tasks.py  localize.py  runner.py
(+28 files in other folders)
