[project]
name = "agentlab-mesh-router"
version = "0.1.0"
description = "AgentLab: Multi-agent evaluation, fault localization, and routing system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "lightgbm>=4.0.0",
    "scikit-learn>=1.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "google-cloud-bigquery>=3.10.0",
    "google-cloud-aiplatform>=1.25.0",
    "boto3>=1.28.0",
    "openai>=1.0.0",
    "azure-monitor-query>=1.2.0",
    "azure-identity>=1.13.0",
    "inspect-ai>=0.3.0",
    "hdbscan>=0.8.30",
    "umap-learn>=0.5.3",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0"
]
training = [
    "torch>=2.0.0",
    "transformers>=4.30.0"
]

[tool.setuptools]
packages = ["common", "orchestrator", "agents", "mesh", "router", "signals", "triage", "sentry", "harness"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []
